# Knowledge

Algorithm/: note.md
Algorithm/动态规划系列/: note.md  动态规划.md  贪心.md
Algorithm/数据结构/: 跳跃表.md
AlgorithmNew/: 做题记录.md  模板.md
AlgorithmNew/NP/: 简介.md
AlgorithmNew/剑指offer/: 11.旋转数组的最小数字.md  12.矩阵中的路径.md  13.机器人的运动范围.md  14-I.剪绳子.md  15.二进制中1的个数.md  16.数值的整数次方.md  17.打印从1到最大的n位数.md  18.删除链表的节点.md  19.正则表达式匹配.md  20.表示数值的字符串.md  21.调整数组顺序使奇数位于偶数前面.md  22.链表中倒数第k个节点.md  24.反转链表.md  25.合并两个排序的链表.md  26.树的子结构.md  27.二叉树的镜像.md  28.对称的二叉树.md  29.顺时针打印矩阵.md  3.数组中重复的数字.md  30.包含min函数的栈.md  31.栈的压入、弹出序列.md  32-I-III.从上到下打印二叉树.md  33.二叉搜索树的后序遍历序列.md  34.二叉树中和为某一值的路径.md  35.复杂链表的复制.md  36.二叉搜索树和双向链表.md  37.序列化二叉树.md  38.字符串的排列.md  39.数组中出现次数超过一半的数字.md  4.二维数组中的查找.md  40.最小的k个数.md  41.数据流中的中位数.md  42.连续子数组的最大和.md  43.1～n整数中1出现的次数.md  44.数字序列中某一位的数字.md  45.把数组排成最小的数.md  46.把数字翻译成字符串.md  47.礼物的最大价值.md  48.最长不含重复字符的子字符串.md  49.丑数.md  (+31 more)
Architecture/:  MicroService.md
Back-endDev/: note.md
DesignPattern/: README.md
Docker/: note.md  微服务与k8s.md
ELK/: ESnote.md
EdgeCompute/: 关于方向.md  我看过的.md
Interview/: main.md
Linux/net/: used.md
MachineLearning/: 科普.md
OS/: tips.md
ParallelComputing/: note1.md  note3.md
UNP/: note.md
Zookeeper/: note.md
blockchain/: graph.pptx  note1.md  note2.md
cpp/: Essential_cpp.md
cpp/cmake/exp/backup/cmake/t2/: CMakeLists.txt  runhello.sh
git/: note.md
go/: go.md
mysql/: 面试.md
network/: dns.md
python/: 2to3.md  download_env_module.md
ts/: note.md
vpn/: note.md
数据仓库和数据挖掘/: note.md
论文/: temp.md  面向实时应用的深度学习研究综述.md  高级.md
(+443 files in other folders)
